show playlist done

--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -15,7 +15,7 @@
     <input type="text" id="name" name="name" required>
     <input type="submit" value="Create Playlist">
   </form>
-  <h1>Your Playlists</h1>
+  <a href="/playlist/show">Your Playlists</a>
 
 </body>
 
