playlist, add song, remove song done

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,6 +21,7 @@
       <% } %>
         <a href="/logout" class="ml-4 text-blue-500 font-semibold">logout</a>
         <a href="/playlist" class="ml-4 text-blue-500 font-semibold">library</a>
+        <a href="/music/allsongs" class="ml-4 text-blue-500 font-semibold">all songs</a>
 
         <script>
           let uploader = document.querySelector("#uploader");
