--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -48,7 +48,7 @@
                           <%= song.year %>
                         </td>
                         <td class="px-4 py-2">
-                          <%= (song.duration / 60).toFixed(2) %> mins
+                          <%= (song.duration) %>
                         </td>
                         <td class="px-4 py-2">
                           <% if (song.poster) { %>
