--- a/views/Home/menu/menuResponsive/minus1000.ejs
+++ b/views/Home/menu/menuResponsive/minus1000.ejs
@@ -76,10 +76,11 @@
       <div class="flex flex-col gap-4 text-[13px] font-semibold text-white/60 max-[1000px]:gap-3">
         <div class="flex flex-row items-center max-[1000px]:justify-end">
           <div class="max-[1000px]:hidden">&nbsp;&nbsp;&nbsp;</div>
-          <a href="/playlist"
-            class="flex flex-row items-center gap-4 hover:text-emerald-500 hover:duration-200 w-max"><i
-              class="ri-folder-add-line"></i>
-            Create New</a>
+          <div
+            class="create-new-playlist flex flex-row items-center gap-4 hover:text-emerald-500 hover:duration-200 w-max cursor-pointer">
+            <i class="ri-folder-add-line"></i>
+            Create New
+          </div>
         </div>
         <div class="flex flex-row items-center max-[1000px]:justify-end">
           <div class="max-[1000px]:hidden">&nbsp;&nbsp;&nbsp;</div>
