--- a/views/Home/menu/menuResponsive/plus1000.ejs
+++ b/views/Home/menu/menuResponsive/plus1000.ejs
@@ -66,11 +66,13 @@
   <div class="text-white flex flex-col gap-3 text-sm">
     <div class="text-emerald-100 tracking-[0.15rem] font-mono uppercase font-semibold">Playlist</div>
     <div class="flex flex-col gap-4 text-[13px] font-semibold text-white/60">
-      <div class="flex flex-row items-center ">
+      <div class="flex flex-row items-center">
         <div>&nbsp;&nbsp;&nbsp;</div>
-        <a href="/playlist" class="flex flex-row items-center gap-4 hover:text-emerald-500 hover:duration-200 w-max"><i
-            class="ri-folder-add-line"></i>
-          Create New</a>
+        <div
+          class="create-new-playlist flex flex-row items-center gap-4 hover:text-emerald-500 hover:duration-200 w-max cursor-pointer">
+          <i class="ri-folder-add-line"></i>
+          Create New
+        </div>
       </div>
       <div class="flex flex-row items-center ">
         <div>&nbsp;&nbsp;&nbsp;</div>
