--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,14 +21,13 @@
       <%- include("./Home/song/song.ejs") %>
   </div>
 
-  <div class="show-create-playlist absolute top-0 left-0 w-full h-full hidden"><%- include("./createPlaylist.ejs") %>
-  </div>
+  <%- include("./Home/createPlaylist.ejs") %>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <script src="/javascripts/home.js"></script>
+    <script src="/javascripts/home.js"></script>
 </body>
 
 </html>
